src/main/java/com/example/restaurant/errors/details/HandleMethodArgumentNotValidErrorDetails.java
package com.example.restaurant.errors.details;

public record HandleMethodArgumentNotValidErrorDetails(
        String field,
        String[] messages
) {
}
